--- a/index.html
+++ b/index.html
@@ -24,11 +24,14 @@
 
     <main>
         <div class="hero">
-            <div class="video-back">
-                <video autoplay muted loop playsinline>
-                    <source src="./assets/img/back.mp4" type="video/mp4">
-                </video>
-                <div class="video-filter"></div>
+            <div class="hero-back">
+                <div class="gradient-bg"></div>
+
+                <div class="blob blob-1"></div>
+                <div class="blob blob-2"></div>
+                <div class="blob blob-3"></div>
+
+                <div class="glass-overlay"></div>
             </div>
 
             <div class="hero-content" data-name="1">
@@ -137,6 +140,7 @@
                         </table>
                     </div>
                 </div> 
+            </div>
         </section>
 
         <section class="add-client fade-up page" data-id="add-client">
