new design add anim

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Service Monitor</title>
 </head>
 <body>
-    <header class="header animate__animated animate__fadeInDown">
+    <header class="header fade-down">
         <div class="header-logo-box">
             <h1 class="header-logo">S/M</h1>
         </div>
@@ -35,9 +35,9 @@
             </div>
 
             <div class="hero-content" data-name="1">
-                <div class="title"><h2 class="hero__title">SERVICE MONITOR</h2></div>
+                <div class="title"><h2 class="hero__title fade-down">SERVICE MONITOR</h2></div>
                 <div class="find">
-                    <input type="text" class="hero__input"
+                    <input type="text" class="hero__input fade-down"
                         placeholder="Введіть назву клієнта">
                     <ul class="result scroll-style">
                         <!-- <li class="result__item hide">
