--- a/index.html
+++ b/index.html
@@ -88,6 +88,12 @@
                     </div>
             
                     <div class="workspace-body">
+                        <!-- <div class="loader" id="loader-spin"></div> -->
+                        <div class="loader" id="loader-2">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                        </div>
                         <table class="main-table">
                             <thead class="main-table-head">
                                 <tr>
@@ -99,6 +105,9 @@
                                     </th>
                                     <th scope="col" class="main-table-head__item">
                                         Стан
+                                    </th>
+                                    <th scope="col" class="main-table-head__item">
+                                        Тип запуску
                                     </th>
                                     <th scope="col" class="main-table-head__item">
                                         IP-адреса
@@ -115,6 +124,9 @@
                                     <td class="main-table-service__item">
                                         <span class="state disabled">disabled</span>
                                     </td>
+                                    <td class="main-table-service__item">
+                                        <span class="state disabled">disabled</span>
+                                    </td>
                                     <td class="main-table-service__item">123.322.12.1</td>
                                     <td class="main-table-service__item">....</td>
                                 </tr>
@@ -124,6 +136,9 @@
                                     <td class="main-table-service__item">
                                         <span class="state active">active</span>
                                     </td>
+                                    <td class="main-table-service__item">
+                                        <span class="state auto">automatic</span>
+                                    </td>
                                     <td class="main-table-service__item">123.322.12.1</td>
                                     <td class="main-table-service__item">....</td>
                                 </tr>
@@ -131,7 +146,10 @@
                                     <td class="main-table-service__item name">HMS FR UA PRRO</td>
                                     <td class="main-table-service__item">1.12.9</td>
                                     <td class="main-table-service__item">
-                                        <span class="state auto">automatic</span>
+                                        <span class="state active">active</span>
+                                    </td>
+                                    <td class="main-table-service__item">
+                                        <span class="state disabled">disabled</span>
                                     </td>
                                     <td class="main-table-service__item">123.322.12.1</td>
                                     <td class="main-table-service__item">....</td>
