fix classes, add errors block, add find on clients

--- a/index.html
+++ b/index.html
@@ -85,77 +85,11 @@
                <div class="workspace">
                     <div class="workspace-header">
                         <h2 class="workspace__title">Список служб:</h2>
+                        <span class="workspace__client"></span>
+                        <p class="workspace__ip">IP станції: <span class="ip-list"></span></p>
                     </div>
             
                     <div class="workspace-body">
-                        <!-- <div class="loader" id="loader-spin"></div> -->
-                        <div class="loader" id="loader-2">
-                            <span></span>
-                            <span></span>
-                            <span></span>
-                        </div>
-                        <table class="main-table">
-                            <thead class="main-table-head">
-                                <tr>
-                                    <th scope="col" class="main-table-head__item">
-                                        Назва служби
-                                    </th>
-                                    <th scope="col" class="main-table-head__item">
-                                        Версія
-                                    </th>
-                                    <th scope="col" class="main-table-head__item">
-                                        Стан
-                                    </th>
-                                    <th scope="col" class="main-table-head__item">
-                                        Тип запуску
-                                    </th>
-                                    <th scope="col" class="main-table-head__item">
-                                        IP-адреса
-                                    </th>
-                                    <th scope="col" class="main-table-head__item">
-                                        Деталі
-                                    </th>
-                                </tr>
-                            </thead>
-                            <tbody id="serviceTableBody">
-                                <tr class="main-table-service">
-                                    <td class="main-table-service__item name">HMS FR UA PRRO</td>
-                                    <td class="main-table-service__item">1.23.2</td>
-                                    <td class="main-table-service__item">
-                                        <span class="state disabled">disabled</span>
-                                    </td>
-                                    <td class="main-table-service__item">
-                                        <span class="state disabled">disabled</span>
-                                    </td>
-                                    <td class="main-table-service__item">123.322.12.1</td>
-                                    <td class="main-table-service__item">....</td>
-                                </tr>
-                                <tr class="main-table-service">
-                                    <td class="main-table-service__item name">HMS FR UA PRRO</td>
-                                    <td class="main-table-service__item">1.25.6</td>
-                                    <td class="main-table-service__item">
-                                        <span class="state active">active</span>
-                                    </td>
-                                    <td class="main-table-service__item">
-                                        <span class="state auto">automatic</span>
-                                    </td>
-                                    <td class="main-table-service__item">123.322.12.1</td>
-                                    <td class="main-table-service__item">....</td>
-                                </tr>
-                                <tr class="main-table-service">
-                                    <td class="main-table-service__item name">HMS FR UA PRRO</td>
-                                    <td class="main-table-service__item">1.12.9</td>
-                                    <td class="main-table-service__item">
-                                        <span class="state active">active</span>
-                                    </td>
-                                    <td class="main-table-service__item">
-                                        <span class="state disabled">disabled</span>
-                                    </td>
-                                    <td class="main-table-service__item">123.322.12.1</td>
-                                    <td class="main-table-service__item">....</td>
-                                </tr>
-                            </tbody>
-                        </table>
                     </div>
                 </div> 
             </div>
