--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <input type="text" class="hero__input fade-down"
                         placeholder="Введіть назву клієнта">
                     <ul class="result scroll-style">
-                        <!-- <li class="result__item hide">
-                            <span class="result__text">Gagarin</span>
+                        <li class="result__item not-found hide">
+                            <span class="result__text ">Клієнта не знайдено</span>
                             <div class="result__arrow"></div>
-                        </li>-->
+                        </li>
                     </ul>
                 </div>
             </div>
